--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,5 +1,15 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  <h1>Home page</h1>
+  <header>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Technologies</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
 {% endblock content %}
