--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 
 {% get_current_language as LANGUAGE_CODE %}
 
@@ -12,6 +13,7 @@
     <meta name="author" content="Rahman Begjanov">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}">
   </head>
   <body>
     {% block content %}{% endblock content %}
