--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,56 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
-html {
+:root {
   box-sizing: border-box;
+  font-size: 62.5%;
+
+  --primary-color-dark: hsl(218, 39%, 35%);
+  --primary-color-light: hsl(199, 74%, 59%);
 }
 
-.header-primary {
-  display: flex;
+body {
+  font-size: 1.6rem;
 }
 
-.header-primary .navbar .list {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
+.bg-primary-dark {
+  background-color: var(--primary-color-dark);
+}
+
+.hero-section-heading {
+  font-size: 4.50rem;
+}
+
+.btn-primary-light {
+  background-color: var(--primary-color-light);
+  border: none;
+  color: white;
+  border-radius: 20px;
+  padding: 10px 20px;
+}
+
+.bg-gray {
+  background-color: hsl(223, 41%, 97%);
+}
+
+.text-primary-dark {
+  color: var(--primary-color-dark);
+}
+
+.subheading-line {
+  height: 2px;
+  width: 100px;
+  background-color: var(--primary-color-light);
+  margin-inline: auto;
+}
+
+.section-heading {
+  font-size: 3.4rem;
 }
