--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,9 +13,11 @@
     <meta name="author" content="Rahman Begjanov">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}">
   </head>
   <body>
     {% block content %}{% endblock content %}
+    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
   </body>
 </html>
