--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -27,7 +27,7 @@
               programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine
               ýetirýär.
             </p>
-            <button class="btn-primary-light">Tanyşmak</button>
+            <button class="btn-primary-light px-5 py-3">Tanyşmak</button>
           </div>
           <div class="col-6">
             <img class="img-fluid" src="{% static "img/hero-img.png" %}" alt="" width="" height="">
@@ -51,25 +51,25 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            <p>
+            <p class="mb-4">
               «Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin
               programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine
               ýetirýär.
             </p>
-            <ul>
-              <li>Web Dizaýn</li>
-              <li>Serwer</li>
-              <li>Photoshop</li>
+            <ul class="list-unstyled">
+              <li><i class="bi bi-check2-all text-primary-light"></i> Web Dizaýn</li>
+              <li><i class="bi bi-check2-all text-primary-light"></i> Serwer</li>
+              <li><i class="bi bi-check2-all text-primary-light"></i> Photoshop</li>
             </ul>
           </div>
           <div class="col-6">
-            <p>
+            <p class="mb-4">
               Anyk kesgitlenen möhletde netijelere ýetmek üçin iň oňat çözgütleri
               hödürleýäris. Siz hem ykdysadyýete geçmek üçin programma
               üpjünçilikleri we ýokary derejeli IT hyzmatlaryndan peýdalanyň!
               Giňişleýin maglumat üçin aşakdaky düwmäni ulanyp bilersiňiz.
             </p>
-            <button>Tanyşmak</button>
+            <button class="btn-primary-outline-light py-3 px-5">Tanyşmak</button>
           </div>
         </div>
       </div>
