--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,7 +13,8 @@
     <meta name="author" content="Rahman Begjanov">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}">
   </head>
   <body>
