--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,11 +7,11 @@
       <img src="{% static "img/logo.png" %}" alt="" width="" height="60">
       <nav>
         <ul class="list-inline fs-2">
-          <li class="list-inline-item me-5">Home</li>
-          <li class="list-inline-item me-5">About</li>
-          <li class="list-inline-item me-5">Projects</li>
-          <li class="list-inline-item me-5">Technologies</li>
-          <li class="list-inline-item">Contact</li>
+          <li class="list-inline-item me-5">Baş sahypa</li>
+          <li class="list-inline-item me-5">Biz barada</li>
+          <li class="list-inline-item me-5">Taslamalar</li>
+          <li class="list-inline-item me-5">Tehnologiýalar</li>
+          <li class="list-inline-item">Habarlaşmak</li>
         </ul>
       </nav>
     </div>
@@ -50,7 +50,7 @@
       <div class="subheading-line mb-5"></div>
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 px-4">
             <p class="mb-4">
               «Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin
               programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine
@@ -62,7 +62,7 @@
               <li><i class="bi bi-check2-all text-primary-light"></i> Photoshop</li>
             </ul>
           </div>
-          <div class="col-6">
+          <div class="col-6 px-5">
             <p class="mb-4">
               Anyk kesgitlenen möhletde netijelere ýetmek üçin iň oňat çözgütleri
               hödürleýäris. Siz hem ykdysadyýete geçmek üçin programma
@@ -73,6 +73,11 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="bg-gray py-5">
+      <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">HYZMATLARYMYZ</h2>
+      <div class="subheading-line mb-3"></div>
+      <p class="text-center">«Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.</p>
     </section>
   </main>
 {% endblock content %}
