--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -77,7 +77,31 @@
     <section class="bg-gray py-5">
       <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">HYZMATLARYMYZ</h2>
       <div class="subheading-line mb-3"></div>
-      <p class="text-center">«Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.</p>
+      <p class="text-center mb-5">«Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.</p>
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="bg-white service-card">
+            <i class="bi bi-rocket-takeoff text-primary-light fs-service-icon"></i>
+            <h3 class="text-primary-dark fs-1 mt-3">Web programmalar</h3>
+            <p>Biz size web programma üpjünçiliginde kömek edip bileris</p>
+          </div>
+          <div class="bg-white service-card">
+            <i class="bi bi-file-earmark-code text-primary-light fs-service-icon"></i>
+            <h3 class="text-primary-dark fs-1 mt-3">Web dizaýn</h3>
+            <p>Biz size web dizaýnda kömek edip bileris</p>
+          </div>
+          <div class="bg-white service-card">
+            <i class="bi bi-android2 text-primary-light fs-service-icon"></i>
+            <h3 class="text-primary-dark fs-1 mt-3">Android</h3>
+            <p>Biz size Android programma üpjünçiliginde kömek edip bileris</p>
+          </div>
+          <div class="bg-white service-card">
+            <i class="bi bi-code-slash text-primary-light fs-service-icon"></i>
+            <h3 class="text-primary-dark fs-1 mt-3">Kiber howpsyzlyk</h3>
+            <p>Biz size kiber howpsyzlyk üpjünçiliginde kömek edip bileris</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 {% endblock content %}
