--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -82,26 +82,55 @@
         <div class="row justify-content-between">
           <div class="bg-white service-card">
             <i class="bi bi-rocket-takeoff text-primary-light fs-service-icon"></i>
-            <h3 class="text-primary-dark fs-1 mt-3">Web programmalar</h3>
+            <h3 class="text-primary-dark fs-1 my-3">Web programmalar</h3>
             <p>Biz size web programma üpjünçiliginde kömek edip bileris</p>
           </div>
           <div class="bg-white service-card">
             <i class="bi bi-file-earmark-code text-primary-light fs-service-icon"></i>
-            <h3 class="text-primary-dark fs-1 mt-3">Web dizaýn</h3>
+            <h3 class="text-primary-dark fs-1 my-3">Web dizaýn</h3>
             <p>Biz size web dizaýnda kömek edip bileris</p>
           </div>
           <div class="bg-white service-card">
             <i class="bi bi-android2 text-primary-light fs-service-icon"></i>
-            <h3 class="text-primary-dark fs-1 mt-3">Android</h3>
+            <h3 class="text-primary-dark fs-1 my-3">Android</h3>
             <p>Biz size Android programma üpjünçiliginde kömek edip bileris</p>
           </div>
           <div class="bg-white service-card">
             <i class="bi bi-code-slash text-primary-light fs-service-icon"></i>
-            <h3 class="text-primary-dark fs-1 mt-3">Kiber howpsyzlyk</h3>
+            <h3 class="text-primary-dark fs-1 my-3">Kiber howpsyzlyk</h3>
             <p>Biz size kiber howpsyzlyk üpjünçiliginde kömek edip bileris</p>
           </div>
         </div>
       </div>
     </section>
+    <section class="py-5">
+      <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">TASLAMALAR</h2>
+      <div class="subheading-line mb-3"></div>
+    </section>
+    <footer class="bg-gray py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2 class="text-primary-dark fs-1 fw-bold">«SANLY ÇÖZGÜT IT MEÝDANÇA» HJ</h2>
+            <p>
+              WC57+94V, Aşgabat, Türkmenistan
+              <br><br>
+              <strong>Telefonlar:</strong> 499401, 499402, 499403
+              <br>
+              <strong>E-poçta:</strong> it@sanly.tm
+            </p>
+          </div>
+          <div class="col-3">
+            <h3>Sahypalar</h3>
+            <ul>
+              <li>Baş sahypa</li>
+              <li>Biz barada</li>
+              <li>Hyzmatlarymyz</li>
+              <li>Taslamalar</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </main>
 {% endblock content %}
