--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -57,9 +57,15 @@
               ýetirýär.
             </p>
             <ul class="list-unstyled">
-              <li><i class="bi bi-check2-all text-primary-light"></i> Web Dizaýn</li>
-              <li><i class="bi bi-check2-all text-primary-light"></i> Serwer</li>
-              <li><i class="bi bi-check2-all text-primary-light"></i> Photoshop</li>
+              <li>
+                <i class="bi bi-check2-all text-primary-light"></i> Web Dizaýn
+              </li>
+              <li>
+                <i class="bi bi-check2-all text-primary-light"></i> Serwer
+              </li>
+              <li>
+                <i class="bi bi-check2-all text-primary-light"></i> Photoshop
+              </li>
             </ul>
           </div>
           <div class="col-6 px-5">
@@ -77,7 +83,10 @@
     <section class="bg-gray py-5">
       <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">HYZMATLARYMYZ</h2>
       <div class="subheading-line mb-3"></div>
-      <p class="text-center mb-5">«Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.</p>
+      <p class="text-center mb-5">
+        «Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma
+        üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.
+      </p>
       <div class="container">
         <div class="row justify-content-between">
           <div class="bg-white service-card">
@@ -114,19 +123,62 @@
             <h2 class="text-primary-dark fs-1 fw-bold">«SANLY ÇÖZGÜT IT MEÝDANÇA» HJ</h2>
             <p>
               WC57+94V, Aşgabat, Türkmenistan
-              <br><br>
+              <br />
+              <br />
               <strong>Telefonlar:</strong> 499401, 499402, 499403
-              <br>
+              <br />
               <strong>E-poçta:</strong> it@sanly.tm
             </p>
           </div>
           <div class="col-3">
-            <h3>Sahypalar</h3>
-            <ul>
-              <li>Baş sahypa</li>
-              <li>Biz barada</li>
-              <li>Hyzmatlarymyz</li>
-              <li>Taslamalar</li>
+            <h3 class="mb-4 text-primary-dark">Sahypalar</h3>
+            <ul class="list-unstyled">
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Baş
+                sahypa
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Biz
+                barada
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Hyzmatlarymyz
+              </li>
+              <li>
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Taslamalar
+              </li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <h3 class="mb-4 text-primary-dark">Hyzmatlarymyz</h3>
+            <ul class="list-unstyled">
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Web
+                dizaýn
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Serwer
+                gurnamak
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> 3D MAX
+              </li>
+              <li>
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Photoshop
+              </li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <h3 class="text-primary-dark">Biziň sahypalarymyz</h3>
+            <p>Biziň salgylarymyz:</p>
+            <ul class="list-inline">
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
             </ul>
           </div>
         </div>
