--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -173,7 +173,7 @@
           </div>
           <div class="col-3">
             <h3 class="text-primary-dark">Biziň sahypalarymyz</h3>
-            <p>Biziň salgylarymyz:</p>
+            <p>Biziň şu ýerlerde yzarlap bilersiňiz:</p>
             <ul class="list-inline">
               <li class="list-inline-item"></li>
               <li class="list-inline-item"></li>
