--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,7 +18,89 @@
     <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}">
   </head>
   <body>
+    <header class="bg-primary-dark text-white py-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <img src="{% static "img/logo.png" %}" alt="" width="" height="60">
+        <nav>
+          <ul class="list-inline fs-2">
+            <li class="list-inline-item me-5">Baş sahypa</li>
+            <li class="list-inline-item me-5">Biz barada</li>
+            <li class="list-inline-item me-5">Taslamalar</li>
+            <li class="list-inline-item me-5">Tehnologiýalar</li>
+            <li class="list-inline-item">Habarlaşmak</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     {% block content %}{% endblock content %}
+    <footer class="bg-gray py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <h2 class="text-primary-dark fs-1 fw-bold">«SANLY ÇÖZGÜT IT MEÝDANÇA» HJ</h2>
+            <p>
+              WC57+94V, Aşgabat, Türkmenistan
+              <br />
+              <br />
+              <strong>Telefonlar:</strong> 499401, 499402, 499403
+              <br />
+              <strong>E-poçta:</strong> it@sanly.tm
+            </p>
+          </div>
+          <div class="col-3">
+            <h3 class="mb-4 text-primary-dark">Sahypalar</h3>
+            <ul class="list-unstyled">
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Baş
+                sahypa
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Biz
+                barada
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Hyzmatlarymyz
+              </li>
+              <li>
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Taslamalar
+              </li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <h3 class="mb-4 text-primary-dark">Hyzmatlarymyz</h3>
+            <ul class="list-unstyled">
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Web
+                dizaýn
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> Serwer
+                gurnamak
+              </li>
+              <li class="mb-3">
+                <i class="bi bi-caret-right-fill text-primary-light"></i> 3D MAX
+              </li>
+              <li>
+                <i class="bi bi-caret-right-fill text-primary-light"></i>
+                Photoshop
+              </li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <h3 class="text-primary-dark">Biziň sahypalarymyz</h3>
+            <p>Biziň şu ýerlerde yzarlap bilersiňiz:</p>
+            <ul class="list-inline">
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
+              <li class="list-inline-item"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
   </body>
 </html>
