--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,39 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  
+  <section class="py-5">
+    <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">BIZ BARADA</h2>
+    <div class="subheading-line mb-5"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 px-4">
+          <p class="mb-4">
+            «Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin
+            programma üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine
+            ýetirýär.
+          </p>
+          <ul class="list-unstyled">
+            <li>
+              <i class="bi bi-check2-all text-primary-light"></i> Web Dizaýn
+            </li>
+            <li>
+              <i class="bi bi-check2-all text-primary-light"></i> Serwer
+            </li>
+            <li>
+              <i class="bi bi-check2-all text-primary-light"></i> Photoshop
+            </li>
+          </ul>
+        </div>
+        <div class="col-6 px-5">
+          <p class="mb-4">
+            Anyk kesgitlenen möhletde netijelere ýetmek üçin iň oňat çözgütleri
+            hödürleýäris. Siz hem ykdysadyýete geçmek üçin programma
+            üpjünçilikleri we ýokary derejeli IT hyzmatlaryndan peýdalanyň!
+            Giňişleýin maglumat üçin aşakdaky düwmäni ulanyp bilersiňiz.
+          </p>
+          <button class="btn-primary-outline-light py-3 px-5">Tanyşmak</button>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock content %}
