--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -36,4 +36,48 @@
       </div>
     </div>
   </section>
+  <section class="bg-gray py-5">
+    <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">HYZMATLARYMYZ</h2>
+    <div class="subheading-line mb-3"></div>
+    <p class="text-center mb-5">
+      «Sanly Çözgüt IT meýdança» HJ sanly ykdysadyýete geçmek üçin programma
+      üpjünçilikleri we ýokary derejeli IT hyzmatlary ýerine ýetirýär.
+    </p>
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="bg-white service-card">
+          <i class="bi bi-rocket-takeoff text-primary-light fs-service-icon"></i>
+          <h3 class="text-primary-dark fs-1 my-3">Web programmalar</h3>
+          <p>Biz size web programma üpjünçiliginde kömek edip bileris</p>
+        </div>
+        <div class="bg-white service-card">
+          <i class="bi bi-file-earmark-code text-primary-light fs-service-icon"></i>
+          <h3 class="text-primary-dark fs-1 my-3">Web dizaýn</h3>
+          <p>Biz size web dizaýnda kömek edip bileris</p>
+        </div>
+        <div class="bg-white service-card">
+          <i class="bi bi-android2 text-primary-light fs-service-icon"></i>
+          <h3 class="text-primary-dark fs-1 my-3">Android</h3>
+          <p>Biz size Android programma üpjünçiliginde kömek edip bileris</p>
+        </div>
+        <div class="bg-white service-card">
+          <i class="bi bi-code-slash text-primary-light fs-service-icon"></i>
+          <h3 class="text-primary-dark fs-1 my-3">Kiber howpsyzlyk</h3>
+          <p>Biz size kiber howpsyzlyk üpjünçiliginde kömek edip bileris</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="py-5">
+    <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">SALGYMYZ</h2>
+    <div class="subheading-line mb-3"></div>
+    <div class="container">
+      <div class="row">
+        <iframe class="map-frame"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.940402160713!2d58.41034707645392!3d37.90845570444735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f6ffd9fd7c40d39%3A0x66acf7abccc12246!2zU2FubHkgw4fDtnpnw7x0IElUIG1lw71kYW7Dp2EgaG9qYWx5ayBqZW1necO9ZXRp!5e0!3m2!1sen!2s!4v1696428241155!5m2!1sen!2s"
+                frameborder="0"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
 {% endblock content %}
