--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -108,7 +108,8 @@
           {% for project in projects %}
             <div class="col-6 p-5">
               <div class="project-card">
-                <img src="{% static project.image.url %}" alt="" height="" width="">
+                <img src="/media/{{ project.photo.url }}" alt="" height="" width="">
+                <h2>{{ project.name }}</h2>
               </div>
             </div>
           {% endfor %}
