--- a/templates/_base.html
+++ b/templates/_base.html
@@ -63,8 +63,10 @@
                 </a>
               </li>
               <li class="mb-3">
-                <i class="bi bi-caret-right-fill text-primary-light"></i>
-                Hyzmatlarymyz
+                <a class="text-black text-decoration-none" href="{% url "projects" %}">
+                  <i class="bi bi-caret-right-fill text-primary-light"></i>
+                  Hyzmatlarymyz
+                </a>
               </li>
               <li>
                 <i class="bi bi-caret-right-fill text-primary-light"></i>
