--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -1,5 +1,12 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  {% for project in projects %}{% endfor %}
+  <div class="container"><div class="row">{% for project in projects %}
+    <div class="col-6 p-5">
+      <div class="project-card">
+        <img class="img-fluid" src="/media/{{ project.photo }}" alt="" height="" width="">
+        <h2 class="p-4">{{ project.name }}</h2>
+      </div>
+    </div>  
+  {% endfor %}</div></div>
 {% endblock content %}
