--- a/templates/_base.html
+++ b/templates/_base.html
@@ -25,7 +25,7 @@
           <ul class="list-inline fs-2">
             <li class="list-inline-item me-5"><a class="text-white text-decoration-none" href="{% url "home" %}">Baş sahypa</a></li>
             <li class="list-inline-item me-5"><a class="text-white text-decoration-none" href="{% url "about" %}">Biz barada</a></li>
-            <li class="list-inline-item me-5">Taslamalar</li>
+            <li class="list-inline-item me-5"><a class="text-white text-decoration-none" href="{% url "projects" %}">Taslamalar</a></li>
             <li class="list-inline-item me-5">Tehnologiýalar</li>
             <li class="list-inline-item">Habarlaşmak</li>
           </ul>
