--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -1,12 +1,20 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  <div class="container"><div class="row">{% for project in projects %}
-    <div class="col-6 p-5">
-      <div class="project-card">
-        <img class="img-fluid" src="/media/{{ project.photo }}" alt="" height="" width="">
-        <h2 class="p-4">{{ project.name }}</h2>
-      </div>
-    </div>  
-  {% endfor %}</div></div>
+  <div class="container">
+    <div class="row">
+      {% for project in projects %}
+        <div class="col-6 p-5">
+          <div class="project-card">
+            <img class="img-fluid"
+                 src="/media/{{ project.photo }}"
+                 alt=""
+                 height=""
+                 width="">
+            <h2 class="p-4">{{ project.name }}</h2>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock content %}
