--- a/templates/pages/project_detail.html
+++ b/templates/pages/project_detail.html
@@ -1,5 +1,9 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  
+  <div class="container">
+    <img class="img-fluid" src="/media/{{ project.photo }}" alt="" height="" width="">
+    <h2>{{ project.name }}</h2>
+    <p>{{ project.description|linebreaks }}</p>
+  </div>
 {% endblock content %}
