--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -109,7 +109,7 @@
             <div class="col-6 p-5">
               <div class="project-card">
                 <img class="img-fluid" src="/media/{{ project.photo }}" alt="" height="" width="">
-                <h2 class="p-4">{{ project.name }}</h2>
+                <h2 class="p-4"><a class="text-black text-decoration-none p-4" href="{% url "project_detail" project.id %}">{{ project.name }}</a></h2>
               </div>
             </div>
           {% endfor %}
