--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -15,7 +15,7 @@
                    alt=""
                    height=""
                    width="">
-              <h2 class="p-4">{{ project.name }}</h2>
+              <h2 class="p-4"><a class="text-black text-decoration-none" href="{% url "project_detail" project.id %}">{{ project.name }}</a></h2>
             </div>
           </div>
         {% endfor %}
