--- a/templates/_base.html
+++ b/templates/_base.html
@@ -98,10 +98,21 @@
             <h3 class="text-primary-dark">Biziň sahypalarymyz</h3>
             <p>Biziň şu ýerlerde yzarlap bilersiňiz:</p>
             <ul class="list-inline">
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item"></li>
-              <li class="list-inline-item"></li>
+              <li class="social-li list-inline-item">
+                <i class="bi bi-twitter-x"></i>
+              </li>
+              <li class="social-li list-inline-item">
+                <i class="bi bi-facebook"></i>
+              </li>
+              <li class="social-li list-inline-item">
+                <i class="bi bi-instagram"></i>
+              </li>
+              <li class="social-li list-inline-item">
+                <i class="bi bi-skype"></i>
+              </li>
+              <li class="social-li list-inline-item">
+                <i class="bi bi-linkedin"></i>
+              </li>
             </ul>
           </div>
         </div>
