--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,23 +1,26 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  <section class="py-5">
+  <section class="py-5 bg-gray">
     <h2 class="section-heading text-primary-dark fw-bold text-center mb-3">BIZ BARADA</h2>
     <div class="subheading-line mb-5"></div>
     <p class="text-center">"Sanly Çözgüt IT meýdança" HJ bilen habarlaşyň!</p>
     <div class="container">
       <div class="row">
-        <div class="col-5">
-          <h3>Salgy:</h3>
-          <p>Oguzhan köçesi</p>
-          <h3>E-poçta:</h3>
-          <p>it@sanly.tm</p>
-          <h3>Telefon belgi:</h3>
-          <p>499401, 499402, 499403</p>
+        <div class="col-5 bg-white p-5">
+          <h3 class="fs-1 text-primary-dark"><i class="bi bi-geo-alt"></i> Salgy:</h3>
+          <p class="mb-4">Oguzhan köçesi</p>
+          <h3 class="fs-1 text-primary-dark"><i class="bi bi-envelope"></i> E-poçta:</h3>
+          <p class="mb-4">it@sanly.tm</p>
+          <h3 class="fs-1 text-primary-dark"><i class="bi bi-telephone"></i> Telefon belgi:</h3>
+          <p class="mb-4">499401, 499402, 499403</p>
           <iframe class="map-frame"
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.940402160713!2d58.41034707645392!3d37.90845570444735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f6ffd9fd7c40d39%3A0x66acf7abccc12246!2zU2FubHkgw4fDtnpnw7x0IElUIG1lw71kYW7Dp2EgaG9qYWx5ayBqZW1necO9ZXRp!5e0!3m2!1sen!2s!4v1696428241155!5m2!1sen!2s"
                   frameborder="0"
                   allowfullscreen></iframe>
+        </div>
+        <div class="col-7 bg-white p-5">
+          
         </div>
       </div>
     </div>
