--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,7 +20,7 @@
   <body>
     <header class="bg-primary-dark text-white py-3">
       <div class="container d-flex justify-content-between align-items-center">
-        <img src="{% static "img/logo.png" %}" alt="" width="" height="60">
+        <a href="{% url "home" %}"><img src="{% static "img/logo.png" %}" alt="" width="" height="60"></a>
         <nav>
           <ul class="list-inline fs-2">
             <li class="list-inline-item me-5"><a class="text-white text-decoration-none" href="{% url "home" %}">Baş sahypa</a></li>
