--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -17,7 +17,7 @@
             <button class="btn-primary-light px-5 py-3">Tanyşmak</button>
           </div>
           <div class="col-6">
-            <img class="img-fluid" src="{% static "img/hero-img.png" %}" alt="" width="" height="">
+            <img class="img-fluid rounded-4" src="{% static "img/hero-img.png" %}" alt="" width="" height="">
           </div>
         </div>
       </div>
@@ -91,7 +91,7 @@
             <h3 class="text-primary-dark fs-1 my-3">Android</h3>
             <p>Biz size Android programma üpjünçiliginde kömek edip bileris</p>
           </div>
-          <div class="bg-white service-card">
+          <div class="bg-white service-card mt-5">
             <i class="bi bi-code-slash text-primary-light fs-service-icon"></i>
             <h3 class="text-primary-dark fs-1 my-3">Kiber howpsyzlyk</h3>
             <p>Biz size kiber howpsyzlyk üpjünçiliginde kömek edip bileris</p>
